# is_production

./: .gitignore  README.md  package.json  pyproject.toml
is_production/: hooks.py  hooks.py.save  modules.txt  patches.txt
is_production/desktop_icon/: production.json
is_production/fixtures/: asset_category.json  custom_docperm.json  role.json
is_production/geo_planning/doctype/define_geo_feature_type/: define_geo_feature_type.js  define_geo_feature_type.json  define_geo_feature_type.py  (+1 more)
is_production/geo_planning/services/: geometry_service.py  layout_geology_jobs.py  layout_geology_service.py  material_calculation_service.py  material_stack_jobs.py  material_stack_service.py  mining_block_jobs.py  mining_block_service.py  mining_schedule_contracts.py  mining_schedule_foundation_service.py  mining_schedule_scenario_service.py  mining_schedule_selection_service.py  mining_spatial_selection_service.py  pit_layout_jobs.py  pit_layout_service.py  planning_calculation_service.py  schedule_simulation_service.py  viewer_geometry_service.py
is_production/patches/: create_diesel_bowsers.py
is_production/production/: utils.py
is_production/production/api/: ceo_dashboard.py
is_production/production/controllers/: notifications.py
is_production/production/custom/: asset.json
is_production/public/: build.json  group_production_tree.html  group_production_tree.json  node_modules
is_production/public/css/: dashboards.css  hourly_dashboard.css  hourly_production_ui.css  offline.css
is_production/public/js/: ceo_dashboard.js  esd_dashboard.js  hourly_production_ui.js  offline_db.js  offline_sync.js  production_3d.bundle.js  production_dashboard.js  production_dependencies.bundle.js
is_production/templates/pages/: portal_hourly_dashboard.html  portal_hourly_dashboard.py  portal_site_volume_graphs.html  portal_site_volume_graphs.py  portal_site_volume_tracking.html  portal_site_volume_tracking.py  survey_portal.html  survey_portal.py  survey_portal_list.html  survey_portal_list.py
is_production/utils/: pdf.py
is_production/workspace_sidebar/: production.json
(+629 files in other folders)
