[project]
name = "is_production"
authors = [
    { name = "Isambane Mining (Pty) Ltd", email = "eben@isambane.co.za"}
]
version = "16.0.0"
description = "Isambane Mining Frappe App for Production Records"
requires-python = ">=3.14"
readme = "README.md"
#dynamic = ["version"]
dependencies = [
    # "frappe~=16.0.0" # Installed and managed by bench.
    "miningpy==0.6.3",
    "shapely==2.1.2",
    "geopandas==1.1.3",
    "pyproj==3.7.2",
    "plotly==6.7.0",
    "rasterio==1.5.0",
    "networkx==3.6.1",
    "ortools==9.15.6755",
    "laspy==2.7.0",
    "scipy==1.17.1",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
