[project]
name = "is_production"
authors = [
    { name = "Isambane Mining (Pty) Ltd", email = "eben@isambane.co.za"}
]
version = "16.0.0"
description = "Isambane Mining Frappe App for Production Records"
requires-python = ">=3.14"
readme = "README.md"
#dynamic = ["version"]
dependencies = [
    # "frappe~=16.0.0" # Installed and managed by bench.
    "miningpy==0.6.3",
    "shapely==2.1.2",
    "geopandas==1.1.3",
    "pyproj==3.7.2",
    "plotly==6.7.0",
    "rasterio==1.5.0",
    "networkx==3.6.1",
    "ortools==9.15.6755",
    "laspy==2.7.0",
    "scipy==1.17.1",

    # Rule-driven scheduling tools
    "lark==1.3.1",
    # "pydantic==2.13.4",
    "dateparser==1.4.0",
    # "rapidfuzz==3.14.5",
    "pint==0.25.3",

    # Data and simulation tools
    "polars==1.41.2",
    "duckdb==1.5.3",
    # "pandas==3.0.3",
    # "numpy==2.4.6",
    "simpy==4.1.2",

    # Progressive pit / 3D tools
    "rioxarray==0.22.0",
    # "pyvista==0.48.4",
    "trimesh==4.12.2",

]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
